syntax = "proto3";

import "google/protobuf/empty.proto";
package file_service;


message infoFile {
    string nombre = 1;
   
}

message GetFileRequest {
  string name = 1;
}

service FileService {
  rpc AddFile(GetFileRequest) returns (google.protobuf.Empty);
  rpc GetFileByName (GetFileRequest) returns (infoFile);
} 

